"fixed overflow of timeline"

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -4,6 +4,10 @@
   box-sizing: border-bo x;
 }
 
+*{
+  z-index:2;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -23,6 +27,7 @@ body {
   max-width: 1140px;
   margin: 0 auto;
   padding: 15px 0;
+  z-index: 1;
 }
 
 .timeline::after {
